--- a/lessonmap/congratulations.html
+++ b/lessonmap/congratulations.html
@@ -177,6 +177,8 @@ h1 {
   border-radius: 12px;
   padding: 16px;
   margin: 25px 0;
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 .leaderboard-box h3 {
@@ -184,11 +186,6 @@ h1 {
   font-size: 1rem;
   margin: 0 0 12px 0;
   text-align: center;
-}
-
-.lb-preview {
-  max-height: 150px;
-  overflow-y: auto;
 }
 
 .lb-preview-item {
@@ -312,6 +309,13 @@ h1 {
   transform: translateY(-3px);
 }
 
+.loading-text {
+  text-align: center;
+  color: rgba(230,238,244,0.6);
+  padding: 20px;
+  font-size: 0.9rem;
+}
+
 .confetti {
   position: fixed;
   width: 10px;
@@ -332,41 +336,14 @@ h1 {
   }
 }
 
-.loading-text {
-  text-align: center;
-  color: rgba(230,238,244,0.6);
-  padding: 20px;
-  font-size: 0.9rem;
-}
-
 @media (max-width: 480px) {
-  main {
-    padding: 15px;
-  }
-
-  .congrats-card {
-    padding: 25px 20px;
-  }
-
-  h1 {
-    font-size: 2rem;
-  }
-
-  .subtitle {
-    font-size: 1rem;
-  }
-
-  .trophy-icon {
-    font-size: 3.5rem;
-  }
-
-  .actions {
-    grid-template-columns: 1fr;
-  }
-
-  .stats-grid {
-    grid-template-columns: 1fr;
-  }
+  main { padding: 15px; }
+  .congrats-card { padding: 25px 20px; }
+  h1 { font-size: 2rem; }
+  .subtitle { font-size: 1rem; }
+  .trophy-icon { font-size: 3.5rem; }
+  .actions { grid-template-columns: 1fr; }
+  .stats-grid { grid-template-columns: 1fr; }
 }
 </style>
 </head>
@@ -380,7 +357,7 @@ h1 {
 
     <div class="achievement-section">
       <div class="achievement-badge">⭐⭐⭐⭐⭐</div>
-      <h2 id="studentName" class="achievement-title">Student Name</h2>
+      <h2 id="studentName" class="achievement-title">Loading...</h2>
       <p class="achievement-text">Has Successfully Completed All 5 Lessons</p>
     </div>
 
@@ -406,8 +383,8 @@ h1 {
 
     <div class="leaderboard-box">
       <h3>🏅 Your Position on Leaderboard</h3>
-      <div class="lb-preview" id="lbPreview">
-        <div class="loading-text">Loading your rank...</div>
+      <div id="lbPreview">
+        <div class="loading-text">Loading...</div>
       </div>
     </div>
 
@@ -435,71 +412,103 @@ h1 {
 </main>
 
 <script type="module">
-import { getCurrentUser } from './firebase-config.js';
-import { getProgressData } from './progress-manager.js';
-import { db } from './firebase-config.js';
-import { ref, get } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
+import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
+import { getDatabase, ref, get } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
+import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
 
-// Check authentication
-const user = getCurrentUser();
-if (!user) {
-  alert('❌ Not authenticated');
-  window.location.href = '../login.html';
-}
+const firebaseConfig = {
+  apiKey: "AIzaSyAEMgcKGhZpui2eEYFA6T6SeYvWB51uRD0",
+  authDomain: "beautifulmind-19645.firebaseapp.com",
+  databaseURL: "https://beautifulmind-19645-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "beautifulmind-19645",
+  storageBucket: "beautifulmind-19645.firebasestorage.app",
+  messagingSenderId: "799227957055",
+  appId: "1:799227957055:web:6a7397f3c43c7a9ed54d8a"
+};
 
-// Load progress
-async function loadData() {
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+const auth = getAuth(app);
+
+// Wait for auth
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    alert('❌ Not authenticated');
+    window.location.href = '/login.html';
+    return;
+  }
+
+  console.log('✅ User:', user.email);
+  loadData(user);
+});
+
+async function loadData(user) {
   try {
-    const progressData = await getProgressData(user.uid);
+    // Get user progress
+    const userSnap = await get(ref(db, `users/${user.uid}`));
+    
+    if (!userSnap.exists()) {
+      throw new Error('User data not found');
+    }
 
-    document.getElementById('studentName').textContent = user.name;
-    document.getElementById('totalStarsDisplay').textContent = progressData.stars;
+    const userData = userSnap.val();
+    const totalStars = userData.stars || 0;
 
-    // Load leaderboard
-    const snapshot = await get(ref(db, 'users'));
+    console.log('📊 Progress:', userData);
+
+    // Update UI
+    document.getElementById('studentName').textContent = userData.name || user.email;
+    document.getElementById('totalStarsDisplay').textContent = totalStars;
+
+    // Get leaderboard
+    const usersSnap = await get(ref(db, 'users'));
     const lbPreview = document.getElementById('lbPreview');
     lbPreview.innerHTML = '';
 
-    if (snapshot.exists()) {
-      const users = Object.values(snapshot.val())
+    if (usersSnap.exists()) {
+      const allUsers = usersSnap.val();
+      const students = Object.values(allUsers)
         .filter(u => u.role === 'student')
         .sort((a, b) => (b.stars || 0) - (a.stars || 0));
 
-      const myIndex = users.findIndex(u => u.email === user.email);
+      const myRank = students.findIndex(u => u.email === user.email) + 1;
+      document.getElementById('rankDisplay').textContent = '#' + myRank;
 
-      if (myIndex >= 0) {
-        document.getElementById('rankDisplay').textContent = '#' + (myIndex + 1);
-      }
-
-      const toShow = users.slice(0, 3);
-      if (myIndex > 2) {
-        toShow.push(users[myIndex]);
+      // Show top 3 + me
+      const toShow = [];
+      students.slice(0, 3).forEach(u => toShow.push(u));
+      if (myRank > 3) {
+        toShow.push(students[myRank - 1]);
       }
 
       toShow.forEach((u) => {
         const isMe = u.email === user.email;
-        const rank = users.findIndex(x => x.email === u.email) + 1;
+        const rank = students.findIndex(x => x.email === u.email) + 1;
         const medal = rank === 1 ? '🥇' : rank === 2 ? '🥈' : rank === 3 ? '🥉' : '#' + rank;
 
         const item = document.createElement('div');
         item.className = 'lb-preview-item' + (isMe ? ' me' : '');
         item.innerHTML = `
           <div class="lb-preview-rank">${medal}</div>
-          <div class="lb-preview-name">${u.name || 'Unknown'}${isMe ? ' 👈' : ''}</div>
+          <div class="lb-preview-name">${u.name || 'Unknown'}${isMe ? ' (You)' : ''}</div>
           <div class="lb-preview-stars">⭐ ${u.stars || 0}</div>
         `;
         lbPreview.appendChild(item);
       });
+
+      console.log('🏆 Your rank:', myRank);
     }
 
     createConfetti();
+
   } catch (error) {
-    console.error('❌ Error loading data:', error);
+    console.error('❌ Error:', error);
+    document.getElementById('studentName').textContent = user.email;
   }
 }
 
 function createConfetti() {
-  const colors = ['#ffd700', '#ff6b6b', '#4ecdc4', '#45b7d1', '#f9ca24', '#6c5ce7', '#a8e6cf'];
+  const colors = ['#ffd700', '#ff6b6b', '#4ecdc4', '#45b7d1', '#f9ca24', '#6c5ce7'];
 
   for (let i = 0; i < 60; i++) {
     const confetti = document.createElement('div');
@@ -516,15 +525,14 @@ function createConfetti() {
   }
 }
 
+// Button events
 document.getElementById('viewLeaderboard').addEventListener('click', () => {
-  window.location.href = 'lesson-map.html';
+  window.location.href = '../lessonmap/lesson-map.html';
 });
 
 document.getElementById('backHome').addEventListener('click', () => {
-  window.location.href = 'lesson-map.html';
+  window.location.href = '../lessonmap/lesson-map.html';
 });
-
-loadData();
 </script>
 
 </body>
